# darkcoin-cpuminer-1.2c

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README  cpu-miner.c  cpuminer-config.h  miner.h  util.c  xcoin.c
x2/: scrypt.c
x5/: defs_x5.h  luffa_for_sse2.c  luffa_for_sse2.h  nist-api.h
x5/blake/sse41/: hash.c  hash.h
x5/echo512/ccalik/aesni/: hash.c  hash_api.h
x5/vect128/: nist.c  nist.h
x6/groestl/aesni/: groestl-asm-aes.h  groestl-version.h  hash-groestl.c  hash-groestl.h
